# tracing_rays_in_3d_space

./: .clang-format  CMakeLists.txt
source/: CMakeLists.txt  driver.cpp
source/mathy/: constants.hpp  sampling.hpp  vector3.hpp
source/tracey/: camera.hpp  composite.hpp  hittable.hpp  lambertian.hpp  material.hpp  metal.hpp  ray.hpp  sphere.hpp
work/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tracing_rays_in_3d_space.sln
work/source/: cmake_install.cmake  renderer.vcxproj  renderer.vcxproj.filters
